style.css
/* ... */
[data-theme="dark"] {
  --primary-color: #37aff0;
  --secondary-color: #6c6ca2;
  --font-color: #fff;
  --bg-color: #161625;
  --heading-color: #e1e1ff;
  --sidebar-color: #161625;
  --active-color: #818cab;
  --card-color: #343a40;
  --card-font-color: #fff;
}

body, html {
  height: 100%;
  margin: 0;
  -webkit-user-select:none;
  -webkit-touch-callout:none;
  -moz-user-select:none;
  -ms-user-select:none;
  user-select:none;
}

body {
  background-color: var(--bg-color);
  color: var(--font-color);
}



/* Hero Section */
.hero {
  position:relative;
  background-color:#333;
  background-image: url(img/splash1.jpg);
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment:local;
  background-position: top;
  height: 120%;
  margin-top: -60px;

}
.hero::before {
  content:'';
  width:100%;
  position:absolute;
  height:100%;
  background:rgba(2,2,2,.3);
}

.hero .hero_content {
  position:relative;
  z-index:99;
  padding:170px 0;
  background:transparent;
  border-radius:0;
}
.hero .hero_content h1, .hero .hero_content p {
  color:#fff;
}
/* iphone 8+ landscape */
@media (max-width:737px) and (max-height:500px){
  .hero .hero_content {
      padding:50px 0;
  }

 .intro, .intro2 {
  margin-top:-5%;
 }

}

/* iphone x later horizontal */
@media (min-width:738px) and (max-height:500px){
  .hero .hero_content {
      padding:15px 0;
 }



}

/*end hero*/

h1 {
  font-size: 1.75rem;
}

h4 {
  font-size: 1rem;
}

.card {
  background-color: var(--card-color);
}

h5, .card-body {
  color: var(--card-font-color) !important;
}

@media (min-width 737px){
  .display-4 {
    font-size: 2.2rem;
  }
  .lead {
    font-size: 20% !important;
  }
}

@media (max-width:737px ) {
  .half-panel {
    width: 60%;
    height: 90%;
    margin-top: 40px;
    position: relative;
    left: 20%;
  }
  .nav-link {
    font-size: 1.75rem;
  }

  .custom-switch {
    transform: scale(1.6,1.6);
    margin-left: -140px;
    padding-top: 10px;
  }

}

@media (min-width: 991.98px) {
  .custom-control {
    margin-bottom: 8px;
      
  }
}

.scrolled-down{
  transform:translateY(-100%); transition: all .3s ease-in-out !important;
  
  }
.scrolled-up{
  transform:translateY(0); transition: all .3s .3s ease-in-out !important;
  }

.navbar {
  z-index: 999;
  /* -webkit-backdrop-filter: blur(12px);
  backdrop-filter: blur(12px);
  background:rgba(0,0,0,0.5); */
}

.navbar-blur-dark {
  z-index: 999;
  -webkit-backdrop-filter: blur(12px);
  backdrop-filter: blur(12px);
  background:rgba(0,0,0,0.5);
}

.navbar-blur {
  z-index: 999;
  -webkit-backdrop-filter: blur(10px);
  backdrop-filter: blur(10px);
}

.navbar-nav {
  align-items: flex-end;
}

.navbar .nav-link:hover,
.navbar .nav-link:focus, 
 {
  color: var(--primary-color);
  text-decoration: none;
}

.navbar-brand {
  color: #fff;
}

/* Change navbar styling on scroll Large Devices */
@media (min-width: 992px) {

  .half-panel {
    width: 100%;
    height: 80%;
    margin-top: 40px;
    position: relative;
  }
}

@media (max-width: 415px){
  .half-panel {
    width: 90%;
    height: 100%;
    margin-top: 40px;
    position: relative;
    padding-bottom: 60px;
    left: 5%;
  }
  .btn {
    transform: scale(1.2,1.2);
  }
}

/* iPhones horizontal */
@media (max-height: 415px) {
  .display-4 {
    font-size: 2rem;
  }
  .lead {
    font-size: 1.25rem;
  }
  .nav-link {
    font-size: 1.5rem;
  }
  .custom-control {
    transform: scale(1.4,1.4);
    margin-right: 20px;
  }
  .fade-in-delay3 {
    margin-top: -8px !important;
  }
  .hello {
    margin-top: 16%;
  }
}
/* ipads */
@media (min-width: 720px) {
  .half-panel {
    width: 90%;
    height: 100%;
    margin-top: 40px;
    position: relative;
    padding-bottom: 60px;
    left: 5%;
  }


}
@media (max-width: 992px) {
  #testimonials {
    padding-top: 18%;
    margin-top: -15%;
  }
  .custom-control{
    padding-bottom: 15px;
  }

}

@media (min-width: 1023px){
  .half-panel {
    width: 100%;
    height: 45%;
    margin-top: 90px;
    position: relative;
    padding-bottom: 60px;
    left: 5%;
  }

}

@media (min-width: 1365px){
  .half-panel {
    width: 95%;
    height: 80%;
    margin-top: 90px;
    position: relative;
    padding-bottom: 60px;
    left: 5%;
  }
}
/* Change navbar styling on scroll XLarge Devices */
@media (min-width: 1900px) {

  .half-panel {
    width: 80%;
    height: 100%;
    margin-top: 40px;
    position: relative;
}
}

/* Change navbar styling on small viewports */
/* @media (max-width: 991.98px) {
  .navbar-toggler, .logo1 {margin-top: -4px;}
  .navbar .navbar-brand, .navbar .nav-link{
      color: #fff;
  }

.navbar.active .nav-link:hover,
.navbar.active .nav-link:focus {
  color: var(--primary-color);
  text-decoration: none;
}

.navbar.active .navbar-brand {
  color: #fff;
}
} */

.intro {
  padding-top: 8%;
  width: 100%;
}

.intro2 {
  padding-top: 4%;
  width: 100%;
}

.content {
  font-size: 1.25rem;
  text-indent: 10%;
  padding-left: 2rem;
  padding-right: 2rem;
  top: 1rem;
}

.btn-primary {
  background-color: #5757bd;
  border-color:transparent;
  
}

.btn-primary:hover {
  background-color: #5c5cc9;
  border-color:transparent;
}

.btn-primary:active {
  background-color: #5c5cc9 !important;
  border-color:transparent !important;
}

.list-items li {
  padding-top: 1.5vh;
  padding-bottom: 1.5vh;
  font-size: 110%;
}


.jumbotron {
  text-align: center;
  background-color: var(--bg-color);
}
#home, #contact {
  color: white;
}


#services {
  background-color: var(--bg-color);
  color: var(--heading-color);
}

.systems {
  color: var(--heading-color);
}

h1, h2, h4{
  text-align: center;
}

.row {
  width: 100vw;
  background-color: var(--secondary-color);
  margin-left: 0;
}

.row-projects {
  max-width: 100%;
  color: var(--heading-color);
}

.bg-color {
  background-color: var(--bg-color);
}
/* ... */

